force-app/Base/main/default/objects/Certification__c/Certification__c.object-meta.xml
<CustomObject>
	<description>Used to track certifications.</description>
	<label>Certification</label>
	<nameField>
		<label>Certification Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Certifications</pluralLabel>
	<sharingModel>Read</sharingModel>
</CustomObject>