force-app/Base/main/default/objects/Certification__c/fields/Certification_Description__c.field-meta.xml
<CustomField>
	<fullName>Certification_Description__c</fullName>
	<description>Description of the certification.</description>
	<label>Certification Description</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>