force-app/Base/main/default/objects/Certification__c/fields/Number_of_Certified_Professionals__c.field-meta.xml
<CustomField>
	<fullName>Number_of_Certified_Professionals__c</fullName>
	<description>Number of certified professionals for this certification.</description>
	<label># of Certified Professionals</label>
	<summaryForeignKey>Certification_Held__c.Certification__c</summaryForeignKey>
	<summaryOperation>count</summaryOperation>
	<type>Summary</type>
</CustomField>