force-app/Base/main/default/objects/Certification__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Status of certification.</description>
	<inlineHelpText>Active - Certification is currently being given.
Retired - Certification is no longer being given.</inlineHelpText>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>Active</fullName>
			</value>
			<value>
				<fullName>Retired</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>