force-app/Base/main/default/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
	<fullName>All</fullName>
	<columns>NAME</columns>
	<columns>Certification_Description__c</columns>
	<columns>Status__c</columns>
	<columns>Number_of_Certified_Professionals__c</columns>
	<filterScope>Everything</filterScope>
	<label>All</label>
</ListView>